--- a/dz6/part2-3/app/composer.json
+++ b/dz6/part2-3/app/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "twig/twig": "~1.0"
     }
 }
