Dz7 part 1 ready

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@ mvc
 dz6/part1/vendor/
 dz6/part2-3/app/vendor/
 dz6/part2-3/app/cache/
-
+dz7/app/vendor/
+dz7/app/cache/
+dz7/part2/vendor/
+dz8/arkuloft-15rest.loft-520af443997a
